--- a/src/pages/Product/product.module.css
+++ b/src/pages/Product/product.module.css
@@ -89,7 +89,7 @@
 
 .carousel_card {
   width: 100%;
-  height: 1000px;
+  height: 100vh;
   position: static;
 
   margin-bottom: 140px;
@@ -104,4 +104,47 @@
   height: 100%;
   top: 0;
   left: 0;
+}
+
+/* Responsive */
+
+@media (max-width: 1200px) {
+  .btn_arrow {
+    bottom: 20px;
+  }
+
+  .btn {
+    bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .navigation {
+    left: 24px;
+    top: 60%;
+  }
+
+  .btn_arrow {
+    right: auto;
+    left: 35%;
+    transform: translateX(-50%);
+  }
+
+  .btn {
+    right: 35%;
+    transform: translateX(50%);
+  }
+}
+
+@media (max-width: 480px) {
+  .btn_arrow {
+    right: auto;
+    left: 10%;
+    transform: translateX(0);
+  }
+
+  .btn {
+    right: 10%;
+    transform: translateX(0);
+  }
 }
