--- a/src/components/Product/Card/card.module.css
+++ b/src/components/Product/Card/card.module.css
@@ -81,6 +81,14 @@
   left: 200.75px;
 }
 
+.header_responsive {
+  display: none;
+  font-size: 60px;
+  font-weight: 500;
+  line-height: 72px;
+  color: var(--color-white) !important;
+}
+
 .action {
   animation: action 1.5s ease-in;
 }
@@ -117,5 +125,148 @@
   100% {
     transform: translate(0);
     opacity: 1;
+  }
+}
+
+/* Responsive */
+
+@media (max-width: 1200px) {
+  .card {
+    transform: translateY(70px);
+  }
+
+  .header_bottom_3 {
+    padding-left: 0;
+    text-align: right;
+  }
+
+  .header_bottom_4 {
+    padding-left: 0;
+    text-align: right;
+  }
+
+  .img_1 {
+    top: 170px;
+    left: 100px;
+  }
+
+  .img_2 {
+    top: 170px;
+    left: 100px;
+  }
+
+  .img_3 {
+    top: 170px;
+    left: 100px;
+  }
+
+  .img_4 {
+    top: 170px;
+    left: 80px;
+  }
+}
+
+@media (max-width: 900px) {
+  .header {
+    h1 {
+      font-size: 48px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    padding: 0 24px;
+  }
+
+  .header_responsive {
+    display: block;
+    font-size: 48px;
+  }
+
+  .header_bottom {
+    display: none;
+  }
+
+  .header_bottom_3 {
+    display: none;
+  }
+
+  .header_bottom_4 {
+    display: none;
+  }
+
+  .img_1 {
+    top: 220px;
+    width: 80%;
+    height: 376.93px;
+  }
+
+  .img_2 {
+    top: 220px;
+    width: 80%;
+    height: 376.93px;
+  }
+
+  .img_3 {
+    top: 220px;
+    width: 80%;
+    height: 376.93px;
+  }
+
+  .img_4 {
+    top: 220px;
+    width: 80%;
+    height: 376.93px;
+  }
+}
+
+@media (max-width: 480px) {
+  .header {
+    h1 {
+      font-size: 38px;
+      line-height: 40px;
+    }
+  }
+
+  .header_responsive {
+    font-size: 38px;
+    line-height: 40px;
+  }
+
+  .img_1 {
+    top: 150px;
+    width: 70%;
+    height: 40%;
+  }
+
+  .img_2 {
+    top: 150px;
+    width: 70%;
+    height: 40%;
+  }
+
+  .img_3 {
+    top: 150px;
+    width: 70%;
+    height: 40%;
+  }
+
+  .img_4 {
+    top: 150px;
+    width: 70%;
+    height: 40%;
+  }
+}
+
+@media (max-width: 400px) {
+  .header {
+    h1 {
+      font-size: 28px;
+    }
+  }
+
+  .header_responsive {
+    font-size: 28px;
   }
 }
