--- a/src/components/Product/ContentCard/contentCard.module.css
+++ b/src/components/Product/ContentCard/contentCard.module.css
@@ -84,7 +84,7 @@
 }
 
 .btn {
-  opacity: 0;
+  opacity: 1;
   display: flex;
   gap: 14px;
   align-items: center;
@@ -100,10 +100,12 @@
   font-weight: 400;
   line-height: 24px;
   text-align: justified;
+  color: var(--color-white);
 }
 
 .line {
-  width: 400px;
+  max-width: 400px;
+  width: 20%;
   height: 1px;
   background-color: white;
   position: absolute;
@@ -147,7 +149,7 @@
 
   100% {
     opacity: 1;
-    width: 400px;
+    width: 20%;
   }
 }
 
@@ -160,5 +162,124 @@
   100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+/* Responsive */
+
+@media (max-width: 1200px) {
+  .line {
+    display: none;
+  }
+
+  .box {
+    top: auto;
+    bottom: 80px;
+    left: auto;
+    right: 100px;
+  }
+
+  .content_1 {
+    top: 500px;
+    left: 400px;
+  }
+
+  .content_2 {
+    top: 500px;
+    left: 400px;
+  }
+
+  .content_3 {
+    top: 500px;
+    left: 400px;
+  }
+
+  .content_4 {
+    top: 500px;
+    left: 400px;
+  }
+}
+
+@media (max-width: 900px) {
+  .content_1 {
+    right: -300px;
+    left: auto;
+  }
+
+  .content_2 {
+    right: -300px;
+    left: auto;
+  }
+
+  .content_3 {
+    right: -300px;
+    left: auto;
+  }
+
+  .content_4 {
+    right: -300px;
+    left: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .box {
+    bottom: 80px;
+    right: 50%;
+    transform: translateX(50%);
+  }
+
+  .content_1 {
+    left: 50%;
+  }
+
+  .content_2 {
+    right: -350px;
+  }
+
+  .content_3 {
+    right: -350px;
+  }
+
+  .content_4 {
+    right: -350px;
+  }
+}
+
+@media (max-width: 480px) {
+  .content_1 {
+    top: 60%;
+    left: 20%;
+  }
+
+  .content_2 {
+    top: 60%;
+    left: 20%;
+  }
+
+  .content_3 {
+    top: 60%;
+    left: 20%;
+  }
+
+  .content_4 {
+    top: 60%;
+    left: 20%;
+  }
+
+  .content {
+    transform: scale(0.6);
+  }
+
+  @keyframes action {
+    0% {
+      opacity: 0;
+      transform: scale(0.6);
+    }
+
+    100% {
+      opacity: 1;
+      transform: scale(0.6);
+    }
   }
 }
