--- a/src/components/Showcase/Card/card.module.css
+++ b/src/components/Showcase/Card/card.module.css
@@ -1,4 +1,5 @@
 .card {
+  width: 100%;
   opacity: 1;
   transform: translateY(294px);
   transition: opacity 0.5s ease;
@@ -33,7 +34,8 @@
   }
 
   img {
-    width: 820px;
+    max-width: 820px;
+    width: 70%;
     height: 480px;
   }
 }
@@ -47,6 +49,63 @@
 }
 
 .action_Old {
-  transform: translateY(-500px);
+  transform: translateY(-200px);
   transform: translateX(100px);
+}
+
+@media (max-width: 1200px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: 10px;
+
+    h1 {
+      width: 100%;
+      position: relative;
+      top: 0;
+    }
+
+    p {
+      width: 90%;
+      position: relative;
+      padding: 0;
+    }
+
+    img {
+      width: 90%;
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .card {
+    h1 {
+      font-size: 38px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    transform: translateY(165px);
+
+    h1 {
+      font-size: 30px;
+      line-height: 40px;
+    }
+
+    p {
+      font-size: 12px;
+    }
+
+    img {
+      width: 100%;
+      height: 200px;
+    }
+  }
 }
