--- a/src/components/Home/InteractiveSection/styles/interactiveSection.module.css
+++ b/src/components/Home/InteractiveSection/styles/interactiveSection.module.css
@@ -36,6 +36,7 @@
   position: absolute;
   left: 70px;
   top: 110px;
+  overflow: hidden;
 }
 
 .icon_Arc {
@@ -176,111 +177,6 @@
   justify-content: center;
 }
 
-/* Animation Left */
-
-.action_left {
-  animation: slideLeft 1s ease-in;
-}
-
-.action_left_close {
-  animation: slideLeftClose 1s ease-in;
-  opacity: 0;
-  transform: translateX(100%);
-}
-
-@keyframes slideLeft {
-  from {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes slideLeftClose {
-  from {
-    opacity: 1;
-    transform: translateX(0);
-  }
-
-  to {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-}
-
-/* Animation zoom */
-
-.action_zoom {
-  animation: slideZoom 1s ease;
-}
-
-.action_zoom_close {
-  animation: slideZoomClose 1s ease;
-  opacity: 0;
-  transform: scale(0);
-}
-
-@keyframes slideZoom {
-  from {
-    opacity: 0;
-    transform: scale(0);
-    transform-origin: center;
-  }
-
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-@keyframes slideZoomClose {
-  from {
-    opacity: 1;
-    transform: scale(1);
-    transform-origin: center;
-  }
-
-  to {
-    opacity: 0;
-    transform: scale(0);
-  }
-}
-
-/* Animation opacity */
-
-.action_opacity {
-  animation: slideOpacity 1s ease-in;
-}
-
-.action_opacity_close {
-  animation: slideOpacityClose 1s ease-in;
-  opacity: 0;
-}
-
-@keyframes slideOpacity {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes slideOpacityClose {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-  }
-}
-
 @media (max-width: 1400px) {
   .content_left {
     min-width: 550px;
@@ -395,7 +291,7 @@
 @media (max-width: 768px) {
   .container {
     gap: 40px;
-    padding: 100px 24px 56px;
+    padding: 70px 24px 56px;
   }
 
   .content_left {
@@ -410,6 +306,7 @@
 @media (max-width: 480px) {
   .header {
     font-size: 40px;
+    line-height: 40px;
     text-align: center;
   }
 
@@ -435,9 +332,61 @@
 
   .content_header {
     font-size: 32px;
+    line-height: 32px;
   }
 
   .content_sub {
     font-size: 12px;
+    text-align: justify;
+  }
+}
+
+@media (max-height: 428px) {
+  .container {
+    padding: 10px 20px;
+    gap: 12px;
+  }
+
+  .header {
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .content {
+    gap: 20px;
+  }
+
+  .content_right {
+    gap: 10px;
+  }
+
+  .content_header {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .content_sub {
+    font-size: 12px;
+  }
+
+  .content_box {
+    gap: 10px;
+  }
+
+  .content_button {
+    button {
+      transform: scale(0.8);
+    }
+  }
+
+  .content_img {
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+
+    img {
+      width: auto;
+      height: 300px;
+    }
   }
 }
