--- a/src/components/Home/MemberSection/styles/memberSection.module.css
+++ b/src/components/Home/MemberSection/styles/memberSection.module.css
@@ -1,11 +1,13 @@
 .container {
   width: 100%;
+  max-width: 1440px;
   padding: 100px 48px;
 
   display: flex;
   flex-wrap: wrap;
   gap: 46px;
   justify-content: center;
+  align-items: center;
   overflow: hidden;
 }
 
@@ -98,36 +100,23 @@
   text-align: left;
 }
 
-.action {
-  animation: action 1s ease;
-  transform: translateY(0);
-}
-
-.close {
-  animation: close 1s ease;
-}
-
-@keyframes action {
-  0% {
-    transform: translateY(var(--translate-value));
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes close {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(var(--translate-value));
-  }
+.box_responsive {
+  width: 300px;
+  height: 400px;
+  display: none;
 }
 
 /* Responsive */
+@media (max-width: 1433px) {
+  .box_responsive {
+    display: block;
+  }
+}
 
 @media (max-width: 1200px) {
+  .box_responsive {
+    display: none;
+  }
   .container {
     gap: 40px;
   }
@@ -142,6 +131,14 @@
     height: 320px;
     background-position: center;
     background-size: cover;
+  }
+}
+
+@media (max-width: 1175px) {
+  .box_responsive {
+    display: block;
+    width: 240px;
+    height: 320px;
   }
 }
 
@@ -170,6 +167,12 @@
   }
 }
 
+@media (max-width: 895px) {
+  .box_responsive {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) {
   .container {
     gap: 20px;
@@ -186,6 +189,12 @@
     }
   }
 
+  .box_responsive {
+    display: block;
+    width: 180px;
+    height: 260px;
+  }
+
   .header {
     font-size: 40px;
     line-height: 44px;
@@ -216,8 +225,20 @@
   }
 }
 
+@media (max-width: 627px) {
+  .box_responsive {
+    display: none;
+  }
+}
+
 @media (max-width: 580px) {
   .card {
+    width: 160px;
+    height: 240px;
+  }
+
+  .box_responsive {
+    display: block;
     width: 160px;
     height: 240px;
   }
@@ -228,29 +249,26 @@
   }
 }
 
+@media (max-width: 567px) {
+  .box_responsive {
+    display: none;
+    width: 160px;
+    height: 240px;
+  }
+}
+
 @media (max-width: 480px) {
   .container {
-    gap: 12px;
-    justify-content: space-evenly;
+    gap: 20px;
     padding: 70px 24px 56px;
   }
 
-  .header {
-    font-size: 20px;
-    line-height: 22px;
-  }
-
-  .content_header {
-    font-size: 16px;
-    line-height: 16px;
-  }
-
   .card {
-    width: 100px;
-    height: 144px;
+    width: 145px;
+    height: 200px;
     padding: 10px 12px;
     p {
-      font-size: 10px;
+      font-size: 11px;
       line-height: 10px;
     }
   }
@@ -264,8 +282,8 @@
   }
 
   .card_member {
-    width: 102px;
-    height: 144px;
+    width: 145px;
+    height: 200px;
     padding: 8px;
   }
 
@@ -278,26 +296,29 @@
     font-size: 12px;
     line-height: 12px;
   }
+  .box_responsive {
+    display: none;
+  }
 }
 
 @media (max-width: 320px) {
   .card {
-    width: 180px;
-    height: 260px;
+    width: 126px;
+    height: 210px;
     p {
-      font-size: 14px;
+      font-size: 12px;
       line-height: 14px;
     }
   }
 
   .header {
-    font-size: 40px;
+    font-size: 38px;
     line-height: 44px;
   }
 
   .card_member {
-    width: 180px;
-    height: 260px;
+    width: 126px;
+    height: 210px;
   }
 
   .box {
@@ -305,17 +326,65 @@
     gap: 8px;
   }
   .content_header {
-    font-size: 32px;
-    line-height: 32px;
+    font-size: 20px;
+    line-height: 20px;
   }
 
   .name {
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 14px;
   }
 
   .position {
-    font-size: 14px;
-    line-height: 14px;
+    font-size: 12px;
+    line-height: 12px;
+  }
+}
+
+@media (max-height: 428px) {
+  .container {
+    padding: 10px 20px 20px;
+  }
+
+  .header {
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .sub {
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  .content_header {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .content_sub {
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  .card {
+    width: 200px;
+    height: 260px;
+  }
+
+  .card_member {
+    width: 200px;
+    height: 260px;
+  }
+
+  .box_responsive {
+    display: block;
+    width: 200px;
+    height: 260px;
+  }
+}
+
+@media (max-height: 320px) {
+  .box_responsive {
+    display: none;
   }
 }
