--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -2,3 +2,9 @@
   width: 100%;
   background-color: var(--color-black);
 }
+
+#member {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
