--- a/src/components/Solution/CustomerSection/styles/animation.module.css
+++ b/src/components/Solution/CustomerSection/styles/animation.module.css
@@ -1,48 +1,3 @@
-.container {
-  width: 100%;
-  padding: 100px 48px;
-
-  display: flex;
-  flex-direction: column;
-  gap: 128px;
-  overflow: hidden;
-}
-
-.header {
-  width: 100%;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  h1 {
-    width: 460.42px;
-    font-size: 48px;
-    font-weight: 500;
-    line-height: 57.6px;
-    letter-spacing: -0.02em;
-    text-align: left;
-  }
-}
-
-.sub {
-  width: 530.26px;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 28.8px;
-  letter-spacing: -0.02em;
-  text-align: left;
-}
-
-.content {
-  width: 100%;
-
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-
 /* Animation up */
 
 .action_up {
@@ -167,66 +122,15 @@
   }
 }
 
-/* Responsive */
-
-@media (max-width: 900px) {
-  .sub {
-    width: 100%;
-    font-size: 20px;
-  }
-
-  .header {
-    flex-direction: column;
-    align-items: start;
-    gap: 15px;
-
-    h1 {
-      width: 100%;
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
-    padding: 100px 24px;
+@media (max-width: 1200px) {
+  .action_upImg {
+    animation: slideCloseOpacity 1s ease-in;
+    opacity: 0.5;
   }
 
   .action_upImg_close {
+    animation: slideOpenOpacity 1s ease-in;
+    opacity: 1;
     transform: translateY(0);
-  }
-
-  @keyframes slideUpImg {
-    from {
-      transform: translateY(0);
-    }
-    to {
-      transform: translateY(0);
-    }
-  }
-
-  @keyframes slideUpImgClose {
-    from {
-      transform: translateY(0);
-    }
-    to {
-      transform: translateY(0);
-    }
-  }
-}
-
-@media (max-width: 480px) {
-  .container {
-    gap: 30px;
-    padding: 70px 48px 56px;
-  }
-
-  .header {
-    h1 {
-      font-size: 40px;
-    }
-  }
-
-  .sub {
-    font-size: 18px;
   }
 }
