--- a/src/components/Solution/IntroSection/styles/introSection.module.css
+++ b/src/components/Solution/IntroSection/styles/introSection.module.css
@@ -1,8 +1,9 @@
 .container {
   width: 100%;
   height: 100vh;
+  padding: 100px 48px;
 
-  background-image: url(../../../assets/images/bgSolution.png);
+  background-image: url(../../../../assets/images/bgSolution.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -91,57 +92,25 @@
   }
 }
 
-/* Animation up */
-
-.action_up {
-  animation: slideUp 1s ease;
-}
-
-.action_up_close {
-  animation: slideUpClose 1s ease;
-  transform: translateY(-200px);
-  opacity: 0.5;
-}
-
-@keyframes slideUp {
-  from {
-    transform: translateY(-200px);
-    opacity: 0.5;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slideUpClose {
-  from {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  to {
-    transform: translateY(-200px);
-    opacity: 0.5;
-  }
-}
-
 /* Responsive */
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
   .container {
     display: flex;
     flex-direction: column;
-    gap: 200px;
     align-items: center;
     justify-content: center;
   }
 
   .header {
+    flex: 1;
     font-size: 48px;
     position: relative;
     top: 0;
     left: 0;
     transform: translateX(0);
+    display: flex;
+    align-items: center;
   }
 
   .content {
@@ -187,11 +156,65 @@
   }
 
   .header {
-    font-size: 40px;
+    font-size: 38px;
+    line-height: 38px;
   }
 
   .sub {
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .box {
+    button {
+      p {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .header {
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .sub {
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .box {
+    button {
+      p {
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@media (max-height: 428px) {
+  .container {
+    padding: 24px;
+  }
+
+  .header {
+    transform: translateY(-25px);
+    width: 100%;
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .sub {
+    width: 100%;
+    font-size: 18px;
+    line-height: 20px;
+  }
+
+  .content {
+    width: 100%;
+    padding: 10px 20px;
   }
 
   .box {
