--- a/src/components/Solution/ProcedureSection/styles/procedureSection.module.css
+++ b/src/components/Solution/ProcedureSection/styles/procedureSection.module.css
@@ -22,6 +22,7 @@
 }
 
 .header_text {
+  width: 620px;
   font-size: 56px;
   font-weight: 500;
   line-height: 67.2px;
@@ -167,18 +168,6 @@
   border-left: 1px dashed rgba(255, 255, 255, 1);
 }
 
-/* Animation Down */
-
-.action_down {
-  animation: slideBoxDown 1s ease-in;
-}
-
-.action_down_close {
-  animation: slideBoxDownClose 1s ease-in;
-  opacity: 0;
-  transform: translateY(-100px);
-}
-
 .content_responsive {
   width: 100%;
   display: none;
@@ -187,218 +176,12 @@
   gap: 20px;
 }
 
-@keyframes slideBoxDown {
-  0% {
-    opacity: 0;
-    transform: translateY(-100px);
+@media (max-width: 1200px) {
+  .container {
+    padding: 70px 24px 56px;
+    gap: 30px;
   }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 
-@keyframes slideBoxDownClose {
-  0% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(-100px);
-  }
-}
-
-/* Animation Up */
-
-.action_up {
-  animation: slideBoxUp 1s ease-in;
-}
-
-.action_up_close {
-  animation: slideBoxUpClose 1s ease-in;
-  opacity: 0;
-  transform: translateY(100px);
-}
-
-@keyframes slideBoxUp {
-  0% {
-    opacity: 0;
-    transform: translateY(100px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes slideBoxUpClose {
-  100% {
-    opacity: 0;
-    transform: translateY(100px);
-  }
-  0% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-/* Animation Header */
-
-.action_header_start {
-  animation: slideBoxLeft 1s ease;
-}
-
-.action_header_end {
-  animation: slideBoxLeftClose 1s ease;
-  transform: translateX(-100%);
-  opacity: 0;
-}
-
-@keyframes slideBoxLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes slideBoxLeftClose {
-  100% {
-    opacity: 0;
-    transform: translateX(-100%);
-  }
-  0% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-/* Animation border */
-
-.action_border {
-  animation: slideBorder 1s ease-in;
-}
-
-.action_border_close {
-  animation: slideBorderClose 1s ease-in;
-  opacity: 0;
-  height: 0;
-}
-
-@keyframes slideBorder {
-  0% {
-    height: 0;
-    opacity: 0;
-  }
-  100% {
-    height: 100%;
-    opacity: 1;
-  }
-}
-
-@keyframes slideBorderClose {
-  100% {
-    height: 0;
-    opacity: 0;
-  }
-  0% {
-    height: 100%;
-    opacity: 1;
-  }
-}
-
-/* Animation width */
-
-.action_width {
-  animation: slideWidth 1s ease-in;
-}
-
-.action_width_close {
-  animation: slideWidthClose 1s ease-in;
-  width: 50%;
-}
-
-@keyframes slideWidth {
-  0% {
-    width: 50%;
-  }
-  100% {
-    width: 100%;
-  }
-}
-
-@keyframes slideWidthClose {
-  100% {
-    width: 50%;
-  }
-  0% {
-    width: 100%;
-  }
-}
-
-/* Animation Opacity */
-
-.action_opacity {
-  animation: slideOpacity 1s ease;
-}
-
-.action_opacity_close {
-  animation: slideOpacityClose 1s ease;
-  opacity: 0;
-}
-
-@keyframes slideOpacity {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes slideOpacityClose {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-/* Animation Background */
-
-.action_background {
-  animation: slideBg 1s ease;
-  opacity: 0.5;
-}
-
-.action_background_close {
-  animation: slideBgClose 1s ease;
-}
-
-@keyframes slideBg {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0.5;
-  }
-}
-
-@keyframes slideBgClose {
-  from {
-    opacity: 0.5;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@media (max-width: 900px) {
   .header {
     flex-direction: column;
     align-items: start;
@@ -452,25 +235,15 @@
   .content_sub {
     font-size: 14px;
   }
-
-  .action_width_close {
-    animation: slideWidthClose 1s ease-in;
-    height: 0%;
-  }
-
-  @keyframes slideWidth {
-    0% {
-      height: 0%;
-    }
-    100% {
-      height: 100%;
-    }
-  }
 }
 
 @media (max-width: 768px) {
-  .container {
-    padding: 100px 24px 56px;
+  .header_text {
+    width: 100%;
+  }
+
+  .container_content {
+    gap: 10px;
   }
 
   .content_responsive {
@@ -497,5 +270,57 @@
 
   .content_sub {
     font-size: 12px;
+  }
+}
+
+@media (max-width: 320px) {
+  .box {
+    padding: 20px 0px 20px 20px;
+  }
+
+  .header_text {
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .sub {
+    font-size: 12px;
+  }
+
+  .content_header {
+    width: 100%;
+    font-size: 14px;
+  }
+
+  .content_sub {
+    font-size: 12px;
+  }
+}
+
+@media (max-height: 428px) {
+  .container {
+    padding: 20px;
+  }
+
+  .box {
+    justify-content: start;
+  }
+
+  .header_text {
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .sub {
+    font-size: 12px;
+  }
+
+  .content_header {
+    width: 100%;
+    font-size: 18px;
+  }
+
+  .content_sub {
+    font-size: 16px;
   }
 }
