--- a/src/components/Showcase/Card/card.module.css
+++ b/src/components/Showcase/Card/card.module.css
@@ -37,6 +37,7 @@
     max-width: 820px;
     width: 70%;
     height: 480px;
+    overflow: hidden;
   }
 }
 
@@ -53,8 +54,16 @@
   transform: translateX(100px);
 }
 
+@media (max-width: 1280px) {
+  .card {
+    transform: translateY(180px);
+  }
+}
+
 @media (max-width: 1200px) {
   .card {
+    transform: translateY(150px);
+
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -64,6 +73,7 @@
       width: 100%;
       position: relative;
       top: 0;
+      font-size: 40px;
     }
 
     p {
@@ -74,6 +84,7 @@
 
     img {
       width: 90%;
+      height: 320px;
     }
   }
 }
@@ -81,7 +92,8 @@
 @media (max-width: 900px) {
   .card {
     h1 {
-      font-size: 38px;
+      width: 100%;
+      font-size: 36px;
     }
 
     p {
@@ -92,11 +104,11 @@
 
 @media (max-width: 480px) {
   .card {
-    transform: translateY(165px);
+    transform: translateY(25%);
 
     h1 {
-      font-size: 30px;
-      line-height: 40px;
+      font-size: 28px;
+      line-height: 28px;
     }
 
     p {
@@ -106,6 +118,54 @@
     img {
       width: 100%;
       height: 200px;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .card {
+    h1 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 12px;
+    }
+
+    img {
+      height: 140px;
+    }
+  }
+}
+
+@media (min-height: 1010px) {
+  .card {
+    transform: translateY(300px);
+
+    img {
+      width: 100%;
+      height: 500px;
+    }
+  }
+}
+
+@media (max-height: 428px) {
+  .card {
+    height: 100%;
+    transform: translateY(0);
+    justify-content: center;
+
+    h1 {
+      font-size: 20px;
+      line-height: 20px;
+    }
+
+    p {
+      font-size: 12px;
+    }
+
+    img {
+      height: 160px;
     }
   }
 }
