--- a/src/pages/Showcase/showcase.module.css
+++ b/src/pages/Showcase/showcase.module.css
@@ -38,6 +38,8 @@
 }
 
 .navigation {
+  height: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -74,9 +76,9 @@
 
 /* Responsive */
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
   .header {
-    top: 12%;
+    top: 13%;
     left: 10%;
   }
 }
@@ -91,7 +93,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   .container {
     padding: 0 24px;
   }
@@ -105,11 +107,58 @@
     align-items: start;
   }
 
-  .navigation {
-    transform: translateY(200px);
-  }
-
   .carousel_card {
     margin-bottom: 270px;
+  }
+}
+
+@media (max-width: 480px) {
+  .navigation {
+    button {
+      padding: 8px 12px;
+
+      font-size: 12px;
+      line-height: 20px;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .header {
+    font-size: 40px;
+    top: 17%;
+  }
+
+  .navigation {
+    transform: translateY(20px);
+  }
+}
+
+@media (min-height: 1010px) {
+  .header {
+    font-size: 80px;
+  }
+}
+
+@media (max-height: 428px) {
+  .header {
+    font-size: 38px;
+    top: 5%;
+    left: 13%;
+  }
+
+  .navigation {
+    button {
+      padding: 6px 10px;
+
+      font-size: 10px;
+      line-height: 18px;
+    }
+  }
+}
+
+@media (max-height: 360px) {
+  .header {
+    top: 3%;
   }
 }
