--- a/src/pages/Product/product.module.css
+++ b/src/pages/Product/product.module.css
@@ -107,6 +107,15 @@
 }
 
 /* Responsive */
+@media (max-width: 1280px) {
+  .btn_arrow {
+    bottom: 20px;
+  }
+
+  .btn {
+    bottom: 20px;
+  }
+}
 
 @media (max-width: 1200px) {
   .btn_arrow {
@@ -145,6 +154,105 @@
 
   .btn {
     right: 10%;
+    transform: translateX(0);
+  }
+}
+
+@media (max-width: 375px) {
+  .navigation {
+    left: 20px;
+    top: 54%;
+  }
+
+  .dot {
+    width: 40px;
+    height: 40px;
+  }
+
+  .btn_arrow {
+    button {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .btn {
+    padding: 10px 20px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 320px) {
+  .navigation {
+    left: 20px;
+    top: 58%;
+  }
+
+  .dot {
+    width: 30px;
+    height: 30px;
+
+    font-size: 10px;
+  }
+
+  .btn_arrow {
+    display: none;
+  }
+
+  .btn {
+    padding: 8px 16px;
+    font-size: 10px;
+  }
+}
+
+@media (max-height: 428px) {
+  .navigation {
+    left: 20px;
+    top: 50%;
+  }
+
+  .dot {
+    width: 38px;
+    height: 38px;
+
+    font-size: 10px;
+  }
+
+  .btn_arrow {
+    button {
+      width: 38px;
+      height: 38px;
+    }
+  }
+
+  .btn {
+    padding: 8px 16px;
+    font-size: 10px;
+  }
+}
+
+@media (max-height: 390px) {
+  .btn_arrow {
+    right: 200px;
+    left: auto;
+    transform: translateX(0);
+  }
+
+  .btn {
+    right: 24px;
+    transform: translateX(0);
+  }
+}
+
+@media (max-height: 320px) {
+  .btn_arrow {
+    right: 15 0px;
+    left: auto;
+    transform: translateX(0);
+  }
+
+  .btn {
+    right: 24px;
     transform: translateX(0);
   }
 }
